fixed spacing of projects in mobile view; added line height to about me p tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,7 @@ aside section p {
     color: var(--dark);
     font-size: 16px;
     margin: 8px;
+    line-height: 1.5em;
 }
 
 aside section a {
@@ -211,9 +212,7 @@ article div {
         margin-right: 36px;
     }
     article {
-        transform: translate(-16px, 0);
-        margin: auto;
-        padding: 16px;
+        margin: 0 auto;
     }
     #my-work {
         font-size: 32px;
@@ -222,7 +221,7 @@ article div {
         margin: 0 0 0 0;
     }
     .project {
-        transform: scale(0.9, 0.9);
+        transform: scale(0.85, 0.85);
     }
     h3 {
         margin-top: 4px;
